# savant

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
custom_components/savant/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  fan.py  light.py  lock.py  manifest.json  scene.py  sensor.py  strings.json  switch.py
custom_components/savant/translations/: cs.json
docs/: authentication.md  cloud-api.md  discovery.md  energy-security.md  environment-control.md  house-configuration.md  media-av.md  scenes.md  security-assessment.md  service-control.md  source-files.md  state-management.md  websocket-protocol.md
pysavant/: __init__.py  client.py  config.py  discovery.py  exceptions.py  models.py  protocol.py  session.py  state.py  transport.py
pysavant/services/: __init__.py  climate.py  fan.py  lighting.py  lock.py  scene.py  shade.py  switch.py
savant_cli/: cli.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/integration/: conftest.py  test_coordinator.py
tests/pysavant/: test_client.py  test_discovery.py  test_exceptions.py  test_models.py  test_protocol.py  test_session.py  test_state.py  test_transport.py
tests/pysavant/services/: test_climate.py  test_fan.py  test_lighting.py  test_lock.py  test_scene.py  test_shade.py
