[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysavant"
version = "0.1.0"
description = "Async Python library for Savant home automation systems"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "v1b3verse" }]
dependencies = [
    "aiohttp>=3.9",
    "msgpack>=1.0",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
savant-cli = "savant_cli.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "homeassistant",
    "homeassistant.*",
    "voluptuous",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["pysavant", "savant_cli", "custom_components"]
